--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "js-cookie": "^3.0.5",
     "nepali-date-converter": "^3.3.1",
     "next": "13.4.12",
     "next-auth": "^4.22.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "swr": "^2.2.1"
   }
 }
